<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Asteroides" >

    <TextView
        style="@style/TitleText"
        android:text="@string/app_name" />

    <Button
        android:id="@+id/btn_play"
        style="@style/MainMenuButtons"
        android:text="@string/play" />

    <Button
        android:id="@+id/btn_config"
        style="@style/MainMenuButtons"
        android:text="@string/configure" />

    <Button
        android:id="@+id/btn_about"
        style="@style/MainMenuButtons"
        android:text="@string/about" />

    <Button
        android:id="@+id/btn_exit"
        style="@style/MainMenuButtons"
        android:text="@string/exit" />

</LinearLayout>